[package]
name = "btrust-bond"
version = "0.1.0"
description = "B Trust On-Chain Bonds Platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "btrust_bond"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

